--- a/pkgmeta.yaml
+++ b/pkgmeta.yaml
@@ -1,9 +1,9 @@
 package-as: InteractiveFishingBobber
 
-move-folders:
-  # This moves KillerCupcakes/Modules/Fire to the same level as KillerCupcakes, as KillerCupCakesOnFire
-  #KillerCupcakes/Modules/Fire: KillerCupcakesOnFire
-  src: InteractiveFishingBobber
+#move-folders:
+#  # This moves KillerCupcakes/Modules/Fire to the same level as KillerCupcakes, as KillerCupCakesOnFire
+#  #KillerCupcakes/Modules/Fire: KillerCupcakesOnFire
+#  src: InteractiveFishingBobber
 
 # Ignore takes place before folder's moving takes place
 ignore: # Files and directories beginning with a dot (such as .git) are automatically ignored, as is the pgkmeta file itself.
